<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mis Contactos UDLA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lblBtn1">Todos</string>
    <string name="lblBtn2">Nuevo</string>
    <string name="lblBtn3">Guardar</string>
    <string name="lblBtn4">Regresar</string>
    <string name="lblBtn5">Eliminar</string>
    <string name="lblBtn6">Ver Detalle</string>
    <string name="aceptar">Aceptar</string>
    <string name="lblTV1">Nombre y Apellido *:</string>
    <string name="lblTV2">Email *:</string>
    <string name="lblTV3">Movil:</string>
    <string name="activity1">Nuevo Contacto UDLA</string>
    <string name="activity2">Editar Contacto UDLA</string>
    <string name="activity3">Eliminar Contactos UDLA</string>
    <string name="advertencia">Deseas eliminar todos los contactos?</string>
    <string name="btnLimpiar">Limpiar</string>

</resources>
