<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblTV1"
        android:textSize="10sp" />

    <EditText
        android:id="@+id/txtEditNombre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblTV2"
        android:textSize="10sp" />

    <EditText
        android:id="@+id/txtEditEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblTV3"
        android:textSize="10sp" />

    <EditText
        android:id="@+id/txtEditFono"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:maxLength="10" />

    <TableRow>

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:onClick="onClickActualizar"
            android:text="@string/lblBtn3" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:onClick="onClickEliminar"
            android:text="@string/lblBtn5" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:onClick="onClickRegresar"
            android:text="@string/lblBtn4" />
    </TableRow>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/nuevo" />

</TableLayout>