<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/filtros"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button1"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="111dp"
        android:onClick="onClickNuevo"
        android:text="@string/lblBtn2" />

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="62dp"
        android:onClick="onClickContactos"
        android:text="@string/lblBtn1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLimpiar"
        android:id="@+id/button"
        android:onClick="onBorrarContactos"
        android:layout_marginBottom="46dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/button1"
        android:layout_alignEnd="@+id/button1"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignStart="@+id/button1" />

</RelativeLayout>